added more content and citations. Complete new outline is needed

--- a/bib.bib
+++ b/bib.bib
@@ -128,7 +128,21 @@ To spice together paths made up of straight lines and circular arcs, each portio
 	author = {Jung, Wooyoung and Lim, Seunghan and Lee, Dongjin and Bang, Hyochoong},
 	month = dec,
 	year = {2016},
+	keywords = {Arrival Angle, Dubins, Path Primitives, Vector Field, Wind},
 	pages = {311--325},
+	annote = {
+Waypoints and paths are planned before UA are operated
+ 
+
+ 
+
+After planning waypoints, paths are then planned by connecting each point together
+
+
+Come back to this for ideas on citing path generation techniques
+
+ 
+ },
 	file = {Unmanned Aircraft Vector Field Path Following with Arrival Angle Control.pdf:C\:\\Users\\gc117711\\Zotero\\storage\\UR6958BU\\Unmanned Aircraft Vector Field Path Following with Arrival Angle Control.pdf:application/pdf}
 }
 
@@ -812,8 +826,12 @@ Proposition 1 looks very familiar to Goncalves work for generating vector fields
 	file = {Desinging Embedded systems for Fixed-wing UAVs.pdf:C\:\\Users\\gc117711\\Zotero\\storage\\5BS2J8W5\\Desinging Embedded systems for Fixed-wing UAVs.pdf:application/pdf}
 }
 
-@misc{noauthor_potential_nodate,
+@misc{koren_potential_1991,
 	title = {Potential {Field} {Methods} and their inherent limitions for morbile robot navigation.pdf},
+	url = {http://ieeexplore.ieee.org/document/131810/},
+	publisher = {IEEE},
+	author = {Koren, Yoram and Borenstein, Johann},
+	year = {1991},
 	keywords = {Histogram, Obstacle, Potential Field},
 	file = {Potential Field Methods and their inherent limitions for morbile robot navigation.pdf:C\:\\Users\\gc117711\\Zotero\\storage\\TRAGE9GA\\Potential Field Methods and their inherent limitions for morbile robot navigation.pdf:application/pdf}
 }
@@ -1058,4 +1076,38 @@ Potential field approach combines all of the three methods into a single step
 	year = {2014},
 	pages = {42--59},
 	file = {Unmanned Aerial Vehicle Path Following - A survey and analysis of algorithms for fixed wing unmanned aerial vehicles.pdf:C\:\\Users\\gc117711\\Zotero\\storage\\NRRNRNUZ\\Unmanned Aerial Vehicle Path Following - A survey and analysis of algorithms for fixed wing unmanned aerial vehicles.pdf:application/pdf}
+}
+
+@article{goerzen_survey_2010,
+	title = {A {Survey} of {Motion} {Planning} {Algorithms} from the {Perspective} of {Autonomous} {UAV} {Guidance}},
+	volume = {57},
+	issn = {0921-0296, 1573-0409},
+	url = {http://link.springer.com/10.1007/s10846-009-9383-1},
+	doi = {10.1007/s10846-009-9383-1},
+	language = {en},
+	number = {1-4},
+	urldate = {2017-10-01},
+	journal = {Journal of Intelligent and Robotic Systems},
+	author = {Goerzen, C. and Kong, Z. and Mettler, B.},
+	month = jan,
+	year = {2010},
+	pages = {65--100},
+	file = {A Survey of Motion Planning Algorithms from perspective autonomous uav guidance.pdf:C\:\\Users\\gc117711\\Zotero\\storage\\FUQU6XCN\\A Survey of Motion Planning Algorithms from perspective autonomous uav guidance.pdf:application/pdf}
+}
+
+@inproceedings{frew_cooperative_2007,
+	title = {Cooperative standoff tracking of uncertain moving targets using active robot networks},
+	url = {http://ieeexplore.ieee.org/abstract/document/4209596/},
+	urldate = {2017-10-02},
+	booktitle = {Robotics and {Automation}, 2007 {IEEE} {International} {Conference} on},
+	publisher = {IEEE},
+	author = {Frew, Eric W.},
+	year = {2007},
+	keywords = {Constant Velocity, Dubins, Lyapunov, Standoff Tracking, Uncertain Target, Vector Field, Wind},
+	pages = {3277--3282},
+	annote = {
+Lyapunov based vector field
+elliptical field is constructed by applying a linear transformation with a non singular matrix whose values are determined from uncertainty in target position estimate
+},
+	file = {Cooperative Standoff Tracking of Uncertain Moving Targets using active robot networks.pdf:C\:\\Users\\gc117711\\Zotero\\storage\\TSPEN9GD\\Cooperative Standoff Tracking of Uncertain Moving Targets using active robot networks.pdf:application/pdf}
 }
